add ability to detect changes on the permission-selector component

--- a/src/app/role-management/role-details/role-details.page.html
+++ b/src/app/role-management/role-details/role-details.page.html
@@ -45,6 +45,8 @@
       <button class="usa-button-primary" (click)="onSubmitClick()">Submit</button>
     </div>
   </div>
+  <pre><code>{{ requestObject | json}}</code></pre>
+
 </div>
 
 
