--- a/src/app/awards/awards.page.html
+++ b/src/app/awards/awards.page.html
@@ -18,24 +18,23 @@
 	<div class="usa-width-three-fourths" >
 		<div>
 			<div class="usa-grid-full">
-				<h3 class="display-inline">{{awardData.documentInformation.id.procurementIdentifier}}</h3><br />
-				<h2 class="display-inline">Vendor Name</h2><br />
-				Vendor Address<br />
-				<br />
+				<h3 class="display-inline">{{awardData.documentInformation.id.procurementIdentifier}} ({{awardData.documentInformation.id.modificationNumber}})</h3><br />
+				<h2 class="display-inline">{{awardData.contractorInformation.vendorName}}</h2><br />
+				{{awardData.contractorInformation.address.city}}, {{awardData.contractorInformation.address.state}}, {{awardData.contractorInformation.address.zip}}
 			</div>
 			<div class="usa-grid-full bottom-border">
 				<div class="usa-width-one-half padding-bottom-10px">
-					DUNS: {{vendorDUNS}}<br />
+					DUNS: {{awardData.contractorInformation.duns}}<br />
 					Global Vendor Name: {{globalVendorName}}<br />
 					Global Vendor DUNS: {{globalVendorDUNS}}
 					<br />
 					<br />
 					<br />
-					Contracting Agency: {{contractingAgency}}<br />
-					Contracting Office: {{contractingOffice}}
+					Contracting Agency: {{awardData.purchaserInformation.contractingOfficeAgencyName}}<br />
+					Contracting Office: {{awardData.purchaserInformation.contractingOfficeName}}
 				</div>
 				<div class="usa-width-one-half">
-					Action Obligation: {{actionObligation}}<br />
+					Action Obligation (current): {{awardData.amountInformation.actionObligation | currency:'USD':true:'.2-2'}}<br />
 					<div class="display-inline" *ngIf="awardData.templateType == 'AWARD' || awardData.templateType == 'OTA'">Award Type:</div>
 					<div class="display-inline" *ngIf="awardData.templateType == 'IDV' || awardData.templateType == 'OTI'">IDV Type:</div>
 					{{awardData.transactionInformation.type}}<br />
@@ -176,20 +175,26 @@
 					Reason for Inter-Agency Contracting: {{awardData.purchaserInformation.reasonForPurchase}}
 				</div>
 				<h3 id="contractorInformation">Contractor Information</h3>
-				SAM Exception: {{samException}}
-				<br />
-				<br />
-				DUNS Number: {{duns}}<br />
-				Vendor Name: {{vendorName}}<br />
-				DBAN: {{dban}}
-				<br />
+				<div *ngIf="awardData.templateType == 'AWARD' || awardData.templateType == 'IDV'">
+					SAM Exception: {{awardData.contractorInformation.samException}}
+				</div>
+				DUNS Number: {{awardData.contractorInformation.duns}}<br />
+				Vendor Name: {{awardData.contractorInformation.vendorName}}<br />
+				DBAN: {{awardData.contractorInformation.dBan}}<br />
+				<div *ngIf="awardData.templateType == 'AWARD' || awardData.templateType == 'IDV'">
+					Contractor Name: {{awardData.contractorInformation.contractorName}}
+				</div>
 				<br />
 				<b>
-				<!--use entity address component-->
+					<awardsAddress [address]="awardData.contractorInformation.address"></awardsAddress>
 				</b>
-				Phone: {{phone}}<br />
-				FAX: {{fax}}<br />
-				Congressional District: {{congressionalDistrict}}
+				<br />
+				<br />
+				Congressional District: {{awardData.contractorInformation.address.congDistrict}}
+				<br />
+				<br />
+				Phone: {{awardData.contractorInformation.address.phoneNumber}}<br />
+				FAX: {{awardData.contractorInformation.address.faxNumber}}
 				<div id="award-type" *ngIf="awardData.templateType == 'AWARD' || awardData.templateType == 'IDV'">
 					<h3 id="businessCategory">Business Category</h3>
 					Organization Type: {{orgType}}<br />
