added more test files, added mock object

--- a/src/app/role-management/permission-selector/permission-selector.html
+++ b/src/app/role-management/permission-selector/permission-selector.html
@@ -13,7 +13,7 @@
       <div class="usa-width-one-twelfth">
         All
         <div class="pull-right">
-          <input type="checkbox" (click)="onCheckAllClick($event.target.checked)">
+          <input class='check-all' type="checkbox" (click)="onCheckAllClick($event.target.checked)">
         </div>
       </div>
       <div class="usa-width-one-fourth">
@@ -22,7 +22,7 @@
       <div class="usa-width-one-twelfth">
         All
         <div class="pull-right">
-          <input type="checkbox" (click)="onCheckAllDefaultClick($event.target.checked)">
+          <input class='check-all-defaults' type="checkbox" (click)="onCheckAllDefaultClick($event.target.checked)">
         </div>
       </div>
     </div>
