--- a/src/app/app-components/type-ahead-multiselect/type-ahead.template.html
+++ b/src/app/app-components/type-ahead-multiselect/type-ahead.template.html
@@ -1,14 +1,14 @@
-<labelWrapper class="sam-list-input" [name]="name" [hint]="hint">
+<labelWrapper class="sam-list-input" [label]="label" [name]="name" [hint]="hint">
 <div class="input-area" samClickOutside (clickOutside)="checkForFocus($event)" samTabOutside (tabOutside)="checkForFocus($event)">
   <div class="input-wrapper">
     <div class="sam-autocomplete">
       <div>
         <label *ngIf="labelText" [attr.for]="id">{{labelText}}<span class="usa-sr-only">&nbsp;autocomplete</span></label>
-        <input [attr.id]="id" #input autocomplete="off" [attr.placeholder]="label" [attr.name]="name" type="text" (focus)="hasFocus = true" (change)="onChange($event.target.value)" (keydown)="onKeydown($event)" (keyup)="onKeyup($event)" [(ngModel)]="innerValue">
+        <input [attr.id]="id" #input autocomplete="off" [attr.placeholder]="placeholder" [attr.name]="name" type="text" (focus)="hasFocus = true" (change)="onChange($event.target.value)" (keydown)="onKeydown($event)" (keyup)="onKeyup($event)" [(ngModel)]="innerValue">
         <span class="usa-type-ahead-search"><i class="fa fa-search"></i></span>
       </div>
       <ul id="sam-autocomplete-results" #resultsList *ngIf="results && hasFocus">
-        <li *ngFor="let result of results" class="usa-type-ahead-list">{{result}}<i *ngIf="checkSelectedList(result)" tabindex="0" class="fa fa-plus-square fa-pull-right" (click)="emitResult(result)" (keydown)="$event.which==13 ? emitResult(result) : ''"></i></li>
+        <li *ngFor="let result of results" class="usa-type-ahead-list" (click)="emitResult(result)" (keydown)="$event.which==13 ? emitResult(result) : ''">{{result}}<i *ngIf="checkSelectedList(result)" tabindex="0" class="fa fa-plus-square fa-pull-right"></i></li>
       </ul>
       <ul #srOnly class="usa-sr-only" role="status" aria-live="assertive" aria-relevant="additions">
       </ul>
