--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -288,116 +288,11 @@
 
 
       <!-- Packages -->
-      <section [attr.id]="generateID(opportunityFields.Packages)" *ngIf="shouldBeDisplayed(opportunityFields.Packages)">
-        <div class="download-container-header">
-          <h2>Packages</h2>
-          <ng-container *ngIf="attachments">
-            <span class="download-button">
-              <a class="usa-button-small usa-button-gray" *ngIf="hasPublicPackages()" href="{{getDownloadAllPackagesURL(opportunity.opportunityId, opportunity.data?.statuses?.isArchived)}}">
-                <i class="fa fa-cloud-download" aria-hidden="true"></i>
-                <span>Download All Packages</span>
-              </a>
-            </span>
-          </ng-container>
-        </div>
-
-        <ng-container *ngIf="attachments && attachments.length > 0">
-          <!--<div *ngFor="let attachment of attachments">-->
-          <!-- Header -->
-          <div class="card download-container" *ngFor="let package of packages" [@intro]="fade">
-
-            <!-- It's public -->
-            <div *ngIf="package.access === 'Public'" class="card-header {{ package.accordionState }}" (click)="toggleAccordion(package)" tabindex="0" (keyup.enter)="toggleAccordion(package)">
-              <h3>{{ package.name }} ({{ package.attachments?.length }})</h3>
-              <strong>Type: {{ package.type }}</strong>
-            </div>
-
-            <span *ngIf="package.access === 'Public'" class="download-button">
-              <a class="usa-button-small usa-button-gray" href="{{getDownloadPackageURL(package.packageId, opportunity.data?.statuses?.isArchived)}}">
-                <i class="fa fa-cloud-download" aria-hidden="true"></i>
-                <span>Download</span>
-              </a>
-            </span>
-
-            <ul *ngIf="package.access === 'Public'" [@accordion]="package.accordionState" class="usa-zebra-list">
-              <!--<li *ngFor="let element of package.attachments">-->
-              <li *ngFor="let resource of package.resources">
-                <!-- Element -->
-                <!--<ng-container *ngFor="let resource of attachment.resources">-->
-                  <!-- Resource -->
-                  <!--<ng-container *ngIf="element.resourceId === resource.resourceId">-->
-                    <div class="download-info">
-
-                      <span class="download-info-icon">
-                        <i class="{{resource.typeInfo.iconClass}}"></i>
-                      </span>
-
-                      <span class="download-info-link">
-                        <a *ngIf="resource.type === 'link'" href="{{resource.uri}}">
-                          {{resource.description}}
-                          <sup *ngIf="resource.size && resource.size != 0">
-                            {{resource.size | filesize}}
-                          </sup>
-                        </a>
-                        <a *ngIf="resource.type === 'file'" href="{{getDownloadFileURL(resource.resourceId, opportunity.data?.statuses?.isArchived)}}">
-                          {{resource.description}}
-                          <sup *ngIf="resource.size && resource.size != 0">
-                            {{resource.size | filesize}}
-                          </sup>
-                        </a>
-                      </span>
-
-                      <span class="download-info-type">
-                        {{resource.typeInfo.name}}
-                      </span>
-                    </div>
-                  <!--</ng-container> -->
-                <!--</ng-container> -->
-              </li>
-            </ul>
-
-            <!-- Its private -->
-            <div *ngIf="package.access === 'Private'" class="card-header-secure">
-              <h3>{{ package.name }} ({{ package.attachments?.length }})</h3>
-              <strong>Type: {{ package.type }}</strong>
-            </div>
-
-            <div *ngIf="package.access === 'Private'" class="card-secure-content">
-              <p>
-                <i class="fa fa-lock fa-3x fa-pull-left" aria-hidden="true"></i>
-                <em>Secure/sensitive attachments are not currently available, please go to <a href="https://www.fbo.gov/">FBO.gov</a> to view this attachment.</em>
-              </p>
-            </div>
-
-            <!-- Extra options -->
-            <div class="card-extra-content">
-              <div class="label-container-inline">
-                <i class="fa fa-calendar-check-o" aria-hidden="true"></i>
-                <strong>Posted on {{ package.postedDate | dateFormat: 'MMM DD, YYYY' }}</strong>
-              </div>
-              <div class="label-container-inline" style="float: right;">
-                <i class="fa" [ngClass]="{'fa-unlock' : package.access === 'Public', 'fa-lock': package.access === 'Private'}" aria-hidden="true"></i>
-                <strong>{{isSecure(package.access)}}</strong>
-              </div>
-            </div>
-          </div>
-          <!--</div>-->
-        </ng-container>
-
-        <div class="card" *ngIf="packages.length < 1 && !attachmentError" [@intro]="fade">
-          <div class="card-secure-content usa-text-center">
-            <i class="fa fa-spinner fa-spin"></i>
-            <strong>Loading &hellip;</strong>
-          </div>
-        </div>
-
-        <div class="card" *ngIf="packages.length < 1 && attachmentError" [@intro]="fade">
-          <div class="card-secure-content usa-text-center">
-            <strong>No packages uploaded.</strong>
-          </div>
-        </div>
-      </section>
-
+      <sam-download 
+        [attachmentError]="attachmentError"
+        [packages]="packages" 
+        [downloadAllUrl]="getDownloadAllPackagesURL(opportunity.opportunityId, opportunity.data?.statuses?.isArchived)"></sam-download>
+      
       <section [attr.id]="generateID(opportunityFields.Contact)" *ngIf="shouldBeDisplayed(opportunityFields.Contact)">
         <h2>Contact Information
           <samButton *ngIf="differences?.changesExistContactInformation" [buttonId]="'defaultBtnContactInformation'" [buttonText]="!showChangesContactInformation ? 'View Changes' : 'Hide Changes'" [buttonType]="btnType" (click)="showHideContactInformation()"></samButton>
