ui-kit + style updates

--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -586,5 +586,10 @@
     </div>
   </div>
 
-
+  <div class="usa-grid">
+    <h2 class="usa-width-one">SAM Download</h2>
+    <div class="usa-width-one-whole">
+      <sam-download [packages]="packages" [downloadAllUrl]="'fakedownloadlink'"></sam-download>
+    </div>
+  </div>
 </div>
