--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -16,7 +16,9 @@
 @import '~uswds/src/stylesheets/uswds';
 
 @import 'components/parent-orgs.scss';
+@import 'components/card';
 @import 'components/date-entry';
+@import 'components/download';
 @import 'components/label-wrapper';
 @import 'components/accordion';
 @import 'components/alert';
