--- a/src/styles/components/_feedback-form.scss
+++ b/src/styles/components/_feedback-form.scss
@@ -127,4 +127,11 @@ body.feedback-open {
     display: inline-block;
   }
 
+  .feedback-alert-warning{
+    background: #fff1d2;
+    height: 36px;
+    font-size: 90%;
+    font-weight: 400;
+    padding-top: 8px;
+  }
 }
