--- a/src/app/role-management/role-details/role-details.page.html
+++ b/src/app/role-management/role-details/role-details.page.html
@@ -22,7 +22,8 @@
       <permission-selector
         [options]="domainRoleOptions"
         selectAllText='Associate Roles'
-        title='Domain Roles'>
+        title='Domain Roles'
+        [hideDefaultColumn]="true">
       </permission-selector>
     </div>
     <div class="m_T-4x">
