--- a/src/styles/components/role-management/_object-details.scss
+++ b/src/styles/components/role-management/_object-details.scss
@@ -12,4 +12,20 @@
   .label-wrapper {
     max-width: 32rem;
   }
+
+  .sam-autocomplete input, .sam-autocomplete, sam-autocomplete {
+    display: inline-block;
+  }
+
+  .add-permission-button {
+    margin: 0;
+  }
+
+  button.usa-button-link {
+    text-decoration: none;
+
+    &.new {
+
+    }
+  }
 }
