wip: awards data opportunity section

--- a/src/styles/all.scss
+++ b/src/styles/all.scss
@@ -66,6 +66,7 @@
 @import 'pages/new-to-sam';
 @import 'pages/help-accounts';
 @import 'pages/help-roadmap';
+@import 'pages/help-awards';
 @import 'pages/users-directory';
 @import 'pages/ui-kit-demo';
 @import 'pages/access';
