--- a/src/app/Help/sections/award-data/award-data.template.html
+++ b/src/app/Help/sections/award-data/award-data.template.html
@@ -1,76 +1,141 @@
-<section>
+<section class="awards-data">
   <h2 class="m_T-2x">Award Data</h2>
   <div class="usa-grid-full">
     <h3 id="opportunities" class="p_L-3x">Opportunities</h3>
-    <p class="p_L-8x">
-      Lorem ipsum dolor sit amet, an quo elitr singulis, cu assum simul persius eos,
-      per omittam concludaturque no. Albucius lobortis ius et, sea debet inimicus ne,
-      nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis
-      ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum
-      deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam
-      fuisset convenire an.
-    </p>
+    <div class="usa-width-one-whole awards-black-border m_L-3x">
+
+      <div class="usa-width-one-whole m_T-3x">
+        <div class="usa-width-two-thirds m_R-0">
+          <div class="usa-width-one-whole p_L-4x p_T-1x">
+            <div class="usa-width-one-sixth relative">
+              <img class="awards-data-image" src="src/assets/img/blank_icon.png" alt="logo image">
+              <span class="edit-image-icon"><i class="fa fa-pencil"></i></span>
+            </div>
+            <div class="usa-width-five-sixths">
+              <h3 class="m_B-0 p_B-1x">Legacy Website:</h3>
+              <span>Federal Business Opportunites</span>
+            </div>
+          </div>
+          <div class="usa-width-one-whole p_L-4x m_B-2x m_T-1x">
+            <h3>Features:</h3>
+            <span class="awards-data-label m_R-3x">Search/Display</span>
+            <span class="awards-data-label m_R-3x">Data Entry</span>
+          </div>
+          <div class="usa-width-one-whole p_L-4x m_T-2x">
+            <h3>Splash Language Lorem Lipsum accusam iudicabit cu.
+              Ad verterem scripserit pro, falli apeirian ad est, vis</h3>
+          </div>
+        </div>
+        <div class="usa-width-one-third awards-black-border p_All-3x">
+          <h3>Common Terms</h3>
+          <div class="usa-width-one-whole m_B-2x">
+            <span>Word &nbsp;&nbsp; <i class="fa fa-times"></i></span>
+            <div class="usa-width-one-whole awards-black-border">
+              Definition Lipsum
+            </div>
+          </div>
+          <div class="usa-width-one-whole m_B-2x">
+            <span>Word &nbsp;&nbsp; <i class="fa fa-times"></i></span>
+            <div class="usa-width-one-whole awards-black-border">
+              Definition Lipsum
+            </div>
+          </div>
+          <div class="usa-width-one-whole m_B-2x">
+            <span>Word &nbsp;&nbsp; <i class="fa fa-times"></i></span>
+            <div class="usa-width-one-whole awards-black-border">
+              Definition Lipsum
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="usa-width-one-whole m_T-2x">
+        <h4 class="p_L-4x">Sub Header</h4>
+        <p class="p_L-4x">
+          Albucius lobortis ius et, sea debet inimicus ne,
+          nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis
+          ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum
+          deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam
+          fuisset convenire
+
+        </p>
+        <button class="usa-button-transparent pull-right">Edit this page <i class="fa fa-edit"></i></button>
+
+      </div>
+
+      <div class="usa-width-one-whole m_T-0">
+        <samAccordion>
+          <samAccordionSection headerText="What is an Opportunity?" name="Opportunity Definition">
+            <p>Opportunity description</p>
+          </samAccordionSection>
+          <samAccordionSection headerText="What qualifies to apply for an opportunity?" name="Opportunity Application">
+            <p>Opportunity description</p>
+          </samAccordionSection>
+        </samAccordion>
+      </div>
+    </div>
+
   </div>
-  <div class="usa-grid-full">
-    <h3 id="awards" class="p_L-3x">Awards</h3>
-    <p class="p_L-8x">
-      Albucius lobortis ius et, sea debet inimicus ne,
-      nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis
-      ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum
-      deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam
-      fuisset convenire an.
-    </p>
-  </div>
-  <div class="usa-grid-full">
-    <h3 id="subAwards" class="p_L-3x">Sub-Awards</h3>
-    <p class="p_L-8x">
-      Lorem ipsum dolor sit amet, an quo elitr singulis, cu assum simul persius eos,
-      per omittam concludaturque no. Albucius lobortis ius et, sea debet inimicus ne,
-      nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis
-      ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum
-      deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam
-      fuisset convenire an.
-    </p>
-  </div>
-  <div class="usa-grid-full">
-    <h3 id="entities" class="p_L-3x">Entities</h3>
-    <p class="p_L-8x">
-      Albucius lobortis ius et, sea debet inimicus ne,
-      nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis
-      ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum
-      deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam
-      fuisset convenire an.
-    </p>
-  </div>
-  <div class="usa-grid-full">
-    <h3 id="assistanceListings" class="p_L-3x">Assistance Listings</h3>
-    <p class="p_L-8x">
-      Lorem ipsum dolor sit amet, an quo elitr singulis, cu assum simul persius eos,
-      per omittam concludaturque no. Albucius lobortis ius et, sea debet inimicus ne,
-      nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis
-      ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum
-      deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam
-      fuisset convenire an.
-    </p>
-  </div>
-  <div class="usa-grid-full">
-    <h3 id="exclusions" class="p_L-3x">Exclusions</h3>
-    <p class="p_L-8x">
-      Albucius lobortis ius et, sea debet inimicus ne,
-      nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis
-      ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum
-      deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam
-      fuisset convenire an.
-    </p>
-  </div>
-  <div class="usa-grid-full">
-    <h3 id="agencies" class="p_L-3x">Agencies</h3>
-    <p class="p_L-8x">
-      Albucius lobortis ius et, sea debet inimicus ne,
-      nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis
-      ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum
-      deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam
-      fuisset convenire an.
-    </p>
-  </div>
+  <!--<div class="usa-grid-full">-->
+    <!--<h3 id="awards" class="p_L-3x">Awards</h3>-->
+    <!--<p class="p_L-8x">-->
+      <!--Albucius lobortis ius et, sea debet inimicus ne,-->
+      <!--nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis-->
+      <!--ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum-->
+      <!--deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam-->
+      <!--fuisset convenire an.-->
+    <!--</p>-->
+  <!--</div>-->
+  <!--<div class="usa-grid-full">-->
+    <!--<h3 id="subAwards" class="p_L-3x">Sub-Awards</h3>-->
+    <!--<p class="p_L-8x">-->
+      <!--Lorem ipsum dolor sit amet, an quo elitr singulis, cu assum simul persius eos,-->
+      <!--per omittam concludaturque no. Albucius lobortis ius et, sea debet inimicus ne,-->
+      <!--nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis-->
+      <!--ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum-->
+      <!--deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam-->
+      <!--fuisset convenire an.-->
+    <!--</p>-->
+  <!--</div>-->
+  <!--<div class="usa-grid-full">-->
+    <!--<h3 id="entities" class="p_L-3x">Entities</h3>-->
+    <!--<p class="p_L-8x">-->
+      <!--Albucius lobortis ius et, sea debet inimicus ne,-->
+      <!--nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis-->
+      <!--ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum-->
+      <!--deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam-->
+      <!--fuisset convenire an.-->
+    <!--</p>-->
+  <!--</div>-->
+  <!--<div class="usa-grid-full">-->
+    <!--<h3 id="assistanceListings" class="p_L-3x">Assistance Listings</h3>-->
+    <!--<p class="p_L-8x">-->
+      <!--Lorem ipsum dolor sit amet, an quo elitr singulis, cu assum simul persius eos,-->
+      <!--per omittam concludaturque no. Albucius lobortis ius et, sea debet inimicus ne,-->
+      <!--nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis-->
+      <!--ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum-->
+      <!--deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam-->
+      <!--fuisset convenire an.-->
+    <!--</p>-->
+  <!--</div>-->
+  <!--<div class="usa-grid-full">-->
+    <!--<h3 id="exclusions" class="p_L-3x">Exclusions</h3>-->
+    <!--<p class="p_L-8x">-->
+      <!--Albucius lobortis ius et, sea debet inimicus ne,-->
+      <!--nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis-->
+      <!--ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum-->
+      <!--deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam-->
+      <!--fuisset convenire an.-->
+    <!--</p>-->
+  <!--</div>-->
+  <!--<div class="usa-grid-full">-->
+    <!--<h3 id="agencies" class="p_L-3x">Agencies</h3>-->
+    <!--<p class="p_L-8x">-->
+      <!--Albucius lobortis ius et, sea debet inimicus ne,-->
+      <!--nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis-->
+      <!--ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum-->
+      <!--deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam-->
+      <!--fuisset convenire an.-->
+    <!--</p>-->
+  <!--</div>-->
 </section>
