--- a/src/app/app-components/type-ahead-multiselect/type-ahead.template.html
+++ b/src/app/app-components/type-ahead-multiselect/type-ahead.template.html
@@ -1,25 +1,29 @@
 <labelWrapper class="sam-list-input" [label]="label" [name]="name" [hint]="hint">
-<div class="input-area" samClickOutside (clickOutside)="checkForFocus($event)" samTabOutside (tabOutside)="checkForFocus($event)">
-  <div class="input-wrapper">
-    <div class="sam-autocomplete">
-      <div>
-        <label *ngIf="labelText" [attr.for]="id">{{labelText}}<span class="usa-sr-only">&nbsp;autocomplete</span></label>
-        <input [attr.id]="id" #input autocomplete="off" [attr.placeholder]="placeholder" [attr.name]="name" type="text" (focus)="showDropdown()" (change)="onChange($event.target.value)" (keydown)="onKeydown($event)" (keyup)="onKeyup($event)" [(ngModel)]="innerValue">
-        <span class="usa-type-ahead-search"><i *ngIf="!hasFocus" class="fa fa-search"></i><i class="fa fa-chevron-down"></i></span>
+  <div class="input-area" samClickOutside (clickOutside)="checkForFocus($event)" samTabOutside (tabOutside)="checkForFocus($event)">
+    <div class="input-wrapper">
+      <div class="sam-autocomplete">
+        <!-- Text input -->
+        <div>
+          <label *ngIf="labelText || labelText" [attr.for]="id">{{labelText}}<span class="usa-sr-only">&nbsp;autocomplete</span></label>
+          <input [attr.id]="id" #input autocomplete="off" [attr.placeholder]="placeholder" [attr.name]="name" type="text" (focus)="showDropdown()" (change)="onChange()" (keydown)="onKeydown($event)" (keyup)="onKeyup($event)" [(ngModel)]="inputValue">
+          <span class="usa-type-ahead-search"><i *ngIf="!hasFocus" class="fa fa-search"></i><i tabindex="0" (click)="showDropdown()" class="fa fa-chevron-down"></i></span>
+        </div>
+        <!-- Lists data if array of strings is passed to component -->
+        <ul id="sam-autocomplete-results-kv" #resultsList *ngIf="results && hasFocus">
+          <li *ngFor="let result of results" (click)="setSelected(result)">{{result}}</li>
+        </ul>
+        <!-- Lists data if array of objects with key/value pair is passed to component -->
+        <ul id="sam-autocomplete-results" #resultsListKV *ngIf="filteredKeyValuePairs && hasFocus">
+          <li *ngFor="let obj of filteredKeyValuePairs" (click)="setSelectedList(obj)" (keydown)="$event.which==13 ? setSelectedList(obj) : ''">
+            {{obj.label}}
+            <i *ngIf="checkSelectedList(obj)" tabindex="0" class="fa fa-plus-square fa-pull-right"></i>
+          </li>
+        </ul>
+        <!-- Screen Reader Only, reads results and selections -->
+        <ul #srOnly class="usa-sr-only" role="status" aria-live="assertive" aria-relevant="additions">
+        </ul>
       </div>
-      <ul id="sam-autocomplete-results" #resultsList *ngIf="results && hasFocus">
-        <li *ngFor="let result of results" class="usa-type-ahead-list" (click)="emitResult(result)"
-            (keydown)="$event.which==13 ? emitResult(result) : ''">{{result}}
-          <i *ngIf="checkSelectedList(result)" tabindex="0" class="fa fa-plus-square fa-pull-right"></i>
-        </li>
-      </ul>
-      <ul #srOnly class="usa-sr-only" role="status" aria-live="assertive" aria-relevant="additions">
-      </ul>
     </div>
   </div>
-  <!--<button tabindex="0" class="usa-button-primary" (click)="showDropdown()" (keydown)="$event.which==13 ? showDropdown() : ''">-->
-    <!--<i class="fa fa-chevron-down" aria-hidden="true"></i>-->
-  <!--</button>-->
-</div>
-  <sam-list-display #listDisplay [newValue]="newValue"><div [innerHTML]="selectedLabel"></div></sam-list-display>
+  <sam-list-display #listDisplay (modelChange)="emitSelected()"><div [innerHTML]="selectedLabel"></div></sam-list-display>
 </labelWrapper>
