--- a/src/styles/components/role-management/_object-details.scss
+++ b/src/styles/components/role-management/_object-details.scss
@@ -13,12 +13,27 @@
     max-width: 32rem;
   }
 
+  .dropdown-list {
+    z-index: 100;
+  }
+
   .sam-autocomplete input, .sam-autocomplete, sam-autocomplete {
     display: inline-block;
   }
 
   .add-permission-button {
     margin: 0;
+    font-size: 1.8em;
+  }
+
+  .input-and-add {
+    position: relative;
+    width: 15em;
+    button {
+      position: absolute;
+      bottom: .2em;
+      right: 0;
+    }
   }
 
   button.usa-button-link {
