--- a/src/app/role-management/role-sidenav/role-sidenav.template.html
+++ b/src/app/role-management/role-sidenav/role-sidenav.template.html
@@ -1,9 +1,9 @@
 <div class="role-sidenav">
   <div class = "m_T-5em ">
-    <div class = "pull-left">
+    <div class = "pull-left filter-color">
       <h3>Filters</h3>
     </div>
-    <div class = "pull-right filter-icon">
+    <div class = "pull-right filter-icon filter-color">
       <i class="fa fa-sliders fa-2x" aria-hidden="true"></i>
     </div>
     <div class = "def-filter">
@@ -13,25 +13,28 @@
             [(model)]="path"
             [options]="radioConfig.options"
             [label]="radioConfig.label"
-            [hint]="radioConfig.hint"
             [name]="radioConfig.name"
-            [errorMessage]="radioConfig.errorMessage">
+            >
           </samRadioButton>
         </samAccordionSection>
       </samAccordion>
+
       <samAccordion [expandIndex]="0">
         <samAccordionSection [headerText]="accordionHeading2" [name]="accordionName2">
-          <samCheckbox
+          <samCheckbox (modelChange)="activeFilter($event)"
             [(model)]="checkboxModel"
-            [name]="checkboxConfig.name"
-            [options]="checkboxConfig.options"
-            [label]="checkboxConfig.label"
-            [hint]="checkboxConfig.hint"
-            [errorMessage]="checkboxConfig.errorMessage"
-            [hasSelectAll]="checkboxConfig.hasSelectAll">
+            [name]="'Domains-Checkbox-Filter'"
+            [options]="filters.domains.options"
+            [label]="filters.domains.label"
+            [hasSelectAll]="'Yes'"
+            >
           </samCheckbox>
         </samAccordionSection>
       </samAccordion>
+      <div class = "tx-pad">
+        <samText [(ngModel)]="newDomain" [name]="'New-Domain-Text-Input'" [errorMessage]="textErrorMessage"></samText>
+        <span class="fa fa-plus-circle"  [ngClass] = "textErrorMessage.length > 0 ? 'btn-plus-error' : 'btn-plus' " aria-hidden="true" (click) = SubmitDomain()></span>
+      </div>
     </div>
   </div>
 </div>
