--- a/src/styles/components/role-management/_role-sidenav.scss
+++ b/src/styles/components/role-management/_role-sidenav.scss
@@ -8,6 +8,25 @@
   }
   .def-filter{
     padding-top: 3em;
-
+  }
+  .filter-color{
+    color: #0071bc;
+  }
+  .tx-pad{
+    padding-left: 3em;
+    padding-right: 3em;
+    position: relative;
+  }
+  .tx-pad .btn-plus {
+    position: absolute;
+    top: 0.41em;
+    left: 12.5em;
+    font-size: 1.5em;
+  }
+  .tx-pad .btn-plus-error {
+    position: absolute;
+    top: 1.9em;
+    left: 11.5em;
+    font-size: 1.5em;
   }
 }
