--- a/src/styles/components/role-management/_role-workspace.scss
+++ b/src/styles/components/role-management/_role-workspace.scss
@@ -3,6 +3,13 @@
     max-width: initial;
   }
   .m_W-3em{
-    padding-left:3em;
+    padding-left:2.4em;
+  }
+  .create-btn{
+    padding-right:5em;
+    padding-top:1em;
+  }
+  .main-content{
+    padding-top: 1.2em;
   }
 }
