--- a/src/styles/components/authentication/profile/_migrations.scss
+++ b/src/styles/components/authentication/profile/_migrations.scss
@@ -1,4 +1,8 @@
 .usa-profile-migrations {
+  .usa-grid {
+    padding: 0rem;
+  }
+
   > h3 {
     margin-top: 5rem !important;
   }
@@ -6,7 +10,7 @@
   .usa-alert {
     position: absolute;
     bottom: -60px;
-    right: 40px;
+    right: 0px;
   }
 
   .usa-alerts {
@@ -17,11 +21,20 @@
     max-width: inherit !important;
   }
 
+  .label-wrapper:nth-child(1) {
+    width: 96%;
+  }
+
+  select {
+    width: 100% !important;
+  }
+
   .button-controls {
     text-align: right;
   }
 
   .usa-migration-history {
+    margin-bottom: 1.5em;
     border-bottom-width: 1px;
     border-bottom-style: solid;
     border-bottom-color: #000000;
@@ -50,7 +63,7 @@
       .group {
         td:nth-child(1),
         td:nth-child(4) {
-          padding-bottom: 0px;
+          padding-bottom: 0em;
           vertical-align: bottom;
         }
 
@@ -64,6 +77,12 @@
         td:nth-child(2) {
           min-width: 150px;
           width: 150px;
+        }
+      }
+
+      &:last-child {
+        td {
+          padding-bottom: 2em !important;
         }
       }
     }
