--- a/src/app/role-management/object-details/object-details.page.html
+++ b/src/app/role-management/object-details/object-details.page.html
@@ -15,7 +15,7 @@
   <!-- Permissions -->
   <div class="usa-grid-full">
     <div class="usa-width-one-half">
-      <sam-list-display #permissionList [newValue]="permissionSetter" [(ngModel)]="selectedPermissions">
+      <sam-list-display #permissionList [newValue]="permissionSetter" [(ngModel)]="selectedPermissions" [showNewIndicator]="true">
         <div class="input-and-add">
           <sam-autocomplete #permission [labelText]="'Permissions'" name="permissions" [options]="permissionOptions" [config]="{addOnIconClass:'fa fa-search'}"></sam-autocomplete>
           <button class="usa-button usa-button-transparent add-permission-button" (click)="onAddPermissionClick()">
