--- a/src/app/role-management/role-workspace.page.html
+++ b/src/app/role-management/role-workspace.page.html
@@ -4,7 +4,7 @@
   </div>
   <div class = "usa-width-three-fourths m_W-3em">
     <div class = "create-btn">
-      <button class="usa-button-outline usa-button-active pull-right" routerLink="{{path}}/new">Create New {{ path === 'roles' ? 'Role' : 'Object' }}</button>
+      <button class="usa-button-outline usa-button-active pull-right" routerLink="../{{path}}/new">Create New {{ path === 'roles' ? 'Role' : 'Object' }}</button>
     <div>
     <h1>Workspace</h1>
     <h3>{{ path === 'roles' ? 'Role' : 'Object' }} Definitions</h3>
