--- a/src/styles/components/role-management/_role-sidenav.scss
+++ b/src/styles/components/role-management/_role-sidenav.scss
@@ -16,6 +16,7 @@
     padding-left: 3em;
     padding-right: 3em;
     position: relative;
+    padding-bottom: 3em;
   }
   .tx-pad .btn-plus {
     position: absolute;
