[SAM-7148] Set maxlength for text boxes

--- a/src/app/assistance-listing/components/account-identification.template.html
+++ b/src/app/assistance-listing/components/account-identification.template.html
@@ -11,6 +11,7 @@
 
     <ng-container *ngFor="let textbox of codeTextboxes">
       <samText [name]="textbox.name"
+               [maxlength]="textbox.length"
                [formControl]="textbox.control"
       ></samText>
     </ng-container>
