--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -78,6 +78,13 @@
 
   </div>
 
+  <div class="usa-grid">
+    <h2>Location Service Demo with Autocomplete</h2>
+    <div class="usa-width-one-whole">
+     <sam-autocomplete location [id]="'h1231029380938489'" [labelText]="'Country Picker'" [config]="locationDemoConfig"></sam-autocomplete>
+    </div>  
+  </div>
+
 
   <div class="usa-grid">
     <h2>Button Component &lt;samButton&gt;</h2>
