[SAM-7148] Add grid layout and styling for account code

--- a/src/app/assistance-listing/assistance-listing-operations/sections/financial-info/other/financial-info-other.page.html
+++ b/src/app/assistance-listing/assistance-listing-operations/sections/financial-info/other/financial-info-other.page.html
@@ -1,30 +1,40 @@
-<div *ngIf="otherFinancialInfoGroup" [formGroup]="otherFinancialInfoGroup">
-  <samTextArea [label] = "'Range and Average of Financial Assistance'"
-               [name] = "'assitance-range-input'"
-               [hint] = "'Provide a range that best represents the smallest and largest awards available. Provide an approximate average award size.'"
-               [required] = "false"
-               [control] = "otherFinancialInfoGroup.get('assistanceRange')"
-               [formControlName] = "'assistanceRange'"
-  ></samTextArea>
+<div class="usa-grid">
 
-  <samCheckboxToggledTextarea [options] = "accomplishmentsConfig"
-                              [formControlName] = "'accomplishments'"
-  ></samCheckboxToggledTextarea>
-
-  {{accomplishmentsModel | json}}
-
-  <samAccountIdentification [options] = "accountIdentificationConfig"
-                            [formControlName] = "'accountIdentification'"
-  ></samAccountIdentification>
-
-  {{accountIdentificationModel | json}}
-
-  <div *ngIf="tafsGroup" [formGroup]="tafsGroup">
-    <samText [label] = "'Treasury Dept. Code'"
-             [name] = "'treasury-dept-code-input'"
-             [required] = "true"
-             [control] = "tafsGroup.get('treasuryDeptCode')"
-             [formControlName] = "'treasuryDeptCode'"
-    ></samText>
+  <div class="usa-width-one-third">
+    Sidenav here
   </div>
+
+  <div class="usa-width-two-thirds">
+    <div *ngIf="otherFinancialInfoGroup" [formGroup]="otherFinancialInfoGroup">
+      <samTextArea [label] = "'Range and Average of Financial Assistance'"
+                   [name] = "'assitance-range-input'"
+                   [hint] = "'Provide a range that best represents the smallest and largest awards available. Provide an approximate average award size.'"
+                   [required] = "false"
+                   [control] = "otherFinancialInfoGroup.get('assistanceRange')"
+                   [formControlName] = "'assistanceRange'"
+      ></samTextArea>
+
+      <samCheckboxToggledTextarea [options] = "accomplishmentsConfig"
+                                  [formControlName] = "'accomplishments'"
+      ></samCheckboxToggledTextarea>
+
+      {{accomplishmentsModel | json}}
+
+      <samAccountIdentification [options] = "accountIdentificationConfig"
+                                [formControlName] = "'accountIdentification'"
+      ></samAccountIdentification>
+
+      {{accountIdentificationModel | json}}
+
+      <div *ngIf="tafsGroup" [formGroup]="tafsGroup">
+        <samText [label] = "'Treasury Dept. Code'"
+                 [name] = "'treasury-dept-code-input'"
+                 [required] = "true"
+                 [control] = "tafsGroup.get('treasuryDeptCode')"
+                 [formControlName] = "'treasuryDeptCode'"
+        ></samText>
+      </div>
+    </div>
+  </div>
+
 </div>
