--- a/src/app/assistance-listing/components/account-identification.template.html
+++ b/src/app/assistance-listing/components/account-identification.template.html
@@ -9,12 +9,19 @@
                 [hint]="codeHint"
                 [required]="required">
 
-    <ng-container *ngFor="let textbox of codeTextboxes">
-      <samText [name]="textbox.name"
-               [maxlength]="textbox.length"
-               [formControl]="textbox.control"
-      ></samText>
-    </ng-container>
+    <div class="usa-grid-full">
+      <div class="usa-width-one-whole">
+        <ng-container *ngFor="let textbox of codeTextboxes">
+          <!-- todo: don't hardcode maxwidth -->
+          <samText [name]="textbox.name"
+                   [maxlength]="textbox.length"
+                   [style.display]="'inline-block'"
+                   [style.maxWidth]=".9*textbox.length + 2.55 + 'rem'"
+                   [formControl]="textbox.control"
+          ></samText>
+        </ng-container>
+      </div>
+    </div>
 
     <samTextArea [name]="textareaName"
                  [placeholder]="textareaPlaceholder"
